<resources>
    <string name="app_name">Streaming App </string>
    <string name="simple_text">Jack and Jill is the story of a boy and a girl who went up a hill together. They went to fetch a pail of water, but unfortunately, their plan is disrupted when Jack falls and hits his head, and rolls back down the hill. Then, Jill falls too, and comes tumbling down after Jack.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_text">Jack and Jill is the story of a boy and a girl who went up a hill together. They went to fetch a pail of water, but unfortunately, thei</string>
    <string name="jon_name">Graphic designer &amp; Programmer  </string>
    <string name="diploma">Computer Science Diploma</string>
    <string name="current_job_post">current_job_post</string>
    <string name="name">Ariga\nCarlton</string>
    <string name="todo">TODO</string>


</resources>
